metadata/force-app/main/default/objects/CustomName_BnLzm__c/CustomName_BnLzm__c.object-meta.xml
<CustomObject>
    <description>Description_fSydK</description>
    <label>CustomLabel_fGByn</label>
    <nameField>
        <label>CustomLabel_fGByn</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_fGByns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>