metadata/force-app/main/default/objects/CustomName_BnLzm__c/fields/CustomField_AhTfE__c.field-meta.xml
<CustomField>
    <fullName>CustomField_AhTfE__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldLZmrE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>